crates/analyzer/tests/snapshots/errors__contract_function_with_generic_params.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: can't use unencodable type as a public contract function argument
  ┌─ compile_errors/contract_function_with_generic_params.fe:4:31
  │
4 │     pub fn bar<T: Dummy>(val: T) {}
  │                               ^ can't use `T` here

error: generic function parameters aren't yet supported outside of struct functions
  ┌─ compile_errors/contract_function_with_generic_params.fe:4:15
  │
4 │     pub fn bar<T: Dummy>(val: T) {}
  │               ^^^^^^^^^^ this cannot appear here
  │
  = Hint: Struct functions can have generic parameters


